2012-03-06 00:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeTheme.h: keep timer
	* GGnomeThemeInitialization.m: Initialize gconf so that
	theme recieves notifications when theme is changed.
	* GGnomeTheme.m: Changes to support theme update when
	theme changes.
	* GNUmakefile: Update makefile to include new source file.
	* GtkInfo.plist: Fix icon issue.

2011-06-09 14:04-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeThemeInitialization.h: Added declarations for functions
	to get the font	based on the default from GNOME.
	* GGnomeThemeInitialization.m: Call functions to get the font
	from the GNOME config.  If it is not one which is available to
	GNUstep pick "Liberation Sans" or "Liberation Mono" if those
	are unavailable do not change.

2011-06-09 11:08-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* NSTabView+Gnome.m: Move the tabs over a little when drawing them
	so that the align better with the notebook widget underneath.

2011-06-08 15:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* NSTabView+Gnome.m: Correct notebook widget drawing.

2011-06-03 01:11-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* NSBrowser+Gnome.m: Draw border.
	* NSScrollView+Gnome.m: Remove logging.
	* NSTabView+Gnome.m: Cleanup

2011-06-02 18:08-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeTheme.[hm]: Remove method to draw grayBezel
	* NSScrollView+Gnome.m: Add debugging information here for now.
	* NSTabView+Gnome.m: Various fixesa and corrections.  Correction for
	tab view issue.  For now use the button method to draw the border.

2011-04-10 16:45-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeTheme.m: Correct drawing issue with horizontal portion of
	menu.
	
2011-03-20 German Arias <german@xelalug.org>

	* NSTabView+Gnome.m: No draw tabs if the style doesn't
	have these.

2011-03-16 11:05-EDT Ivan Vucica <ivucica@gmail.com>
